--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,7 +1,26 @@
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=DEBUG, Rolling
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+
+
+# Set up the rolling appender
+log4j.appender.Rolling=org.apache.log4j.RollingFileAppender
+#log4j.appender.Rolling.File=${catalina.home}/logs/SCF-Forms.log
+log4j.appender.Rolling.File=/data/SCF-Forms.log
+log4j.appender.Rolling.MaxFileSize=1000KB
+log4j.appender.Rolling.MaxBackupIndex=5
+
+# Make a layout for Rolling
+log4j.appender.Rolling.layout=org.apache.log4j.PatternLayout
+log4j.appender.Rolling.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+
+#Hibernate Logging
+log4j.logger.org.hibernate=ERROR
+
+#JSF Logging
+log4j.logger.javax.faces=WARN
 
