Added FileUploading capabilities

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, Rolling
+log4j.rootLogger=DEBUG, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 # Set up the rolling appender
 log4j.appender.Rolling=org.apache.log4j.RollingFileAppender
 #log4j.appender.Rolling.File=${catalina.home}/logs/SCF-Forms.log
-log4j.appender.Rolling.File=/data/SCF-Forms.log
+log4j.appender.Rolling.File=/data/tomcat/logs/SCF-Forms.log
 log4j.appender.Rolling.MaxFileSize=1000KB
 log4j.appender.Rolling.MaxBackupIndex=5
 
